[gd_scene load_steps=4 format=3 uid="uid://bxp56jg5eun05"]

[ext_resource type="Script" path="res://game/scenes/tower/weapon/_tweapon_object.gd" id="1_3wcxx"]
[ext_resource type="Texture2D" uid="uid://dnti04ckxc6up" path="res://assets/sprites/towers/weapons/cannon normal/turret_01_01.png" id="2_r5n07"]
[ext_resource type="PackedScene" uid="uid://cprcy14k6dh78" path="res://game/scenes/tower/projetiles/bullet.tscn" id="2_v5nwu"]

[node name="TowerWeaponObject" type="Node2D"]
script = ExtResource("1_3wcxx")
projectile_scene = ExtResource("2_v5nwu")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_r5n07")

[node name="VisionArea" type="Area2D" parent="."]
visible = false

[node name="Collision" type="CollisionShape2D" parent="VisionArea"]

[node name="AmmoBox" type="Node2D" parent="."]
show_behind_parent = true
z_index = 100

[node name="RechargeTimer" type="Timer" parent="."]
wait_time = 0.5
